--- a/css/style.css
+++ b/css/style.css
@@ -31,3 +31,151 @@
     /* -------------- */
     --border-color: rgba(255, 255, 255, 0.15);
 }
+
+body {
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 16px;
+    color: var(--first-shadow-color);
+    background-color: var(--first-background-color);
+}
+
+/* ------------------------------ */
+
+.logo {
+    font-weight: 600;
+    font-size: 22px;
+    color: var(--first-light-color);
+}
+
+.nav-link {
+    color: var(--first-shadow-color);
+}
+
+.auth-link {
+    font-weight: 600;
+    opacity: 0.78;
+    color: var(--second-shadow-color);
+}
+
+.hero-title {
+    font-size: 50px;
+    line-height: 140%;
+    color: var(--first-light-color);
+}
+
+.hero-description {
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 167%;
+}
+
+.input {
+    font-weight: 400;
+    font-size: 14px;
+    color: var(--third-shadow-color);
+}
+
+.button {
+    font-weight: 600;
+    color: var(--third-light-color);
+}
+
+.section-title {
+    font-size: 48px;
+    line-height: 130%;
+    text-align: center;
+    color: var(--first-light-color);
+}
+
+.section-description {
+    font-size: 18px;
+    line-height: 167%;
+    text-align: center;
+}
+
+.card-title {
+    font-size: 24px;
+    color: var(--second-shadow-color);
+}
+
+.card-price {
+    font-weight: 400;
+    font-size: 18px;
+    color: var(--fourth-shadow-color);
+}
+
+.card-description {
+    font-weight: 400;
+    line-height: 187%;
+}
+
+.card-link {
+    font-weight: 600;
+    color: var(--first-shadow-color);
+}
+
+.popular-tools-button {
+    font-size: 20px;
+    color: var(--fifth-light-color);
+}
+
+.trusted-title {
+    font-size: 24px;
+    color: var(--sixth-light-color);
+    text-align: center;
+}
+
+.newcomer-title {
+    font-size: 48px;
+    line-height: 130%;
+    color: var(--first-light-color);
+}
+
+.newcomer-description {
+    font-size: 18px;
+    line-height: 167%;
+}
+
+.newcomer-button {
+    font-size: 18px;
+    color: var(--third-light-color);
+}
+
+.our-team-name {
+    font-size: 26px;
+    letter-spacing: 0.01em;
+    color: var(--sixth-shadow-color);
+}
+
+.our-team-job {
+    font-weight: 400;
+    color: var(--fifth-shadow-color);
+}
+
+.our-team-description {
+    font-family: var(--second-family);
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 214%;
+    letter-spacing: 0.01em;
+    color: var(--second-shadow-color);
+}
+
+.footer-copyright {
+    color: var(--first-light-color);
+}
+
+.footer-description {
+    font-size: 14px;
+    line-height: 179%;
+}
+
+.item-title {
+    font-size: 20px;
+    color: var(--first-light-color);
+}
+
+.item-link {
+    color: var(--first-shadow-color);
+}
