--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,10 @@ body {
     outline: 1px solid red;
 }
 
+.flex {
+    display: flex;
+}
+
 .flex-alignitems-baseline {
     display: flex;
     align-items: baseline;
@@ -175,7 +179,15 @@ body {
     margin-bottom: 200px;
 }
 
+.title-content {
+    width: 460px;
+    margin-bottom: 90px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .section-title {
+    margin-bottom: 25px;
     font-size: 48px;
     line-height: 130%;
     text-align: center;
@@ -183,12 +195,43 @@ body {
 }
 
 .section-description {
+    width: 427px;
+    margin: 0 auto;
     font-size: 18px;
     line-height: 167%;
     text-align: center;
 }
 
+.card-list {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 24px;
+    row-gap: 100px;
+    margin-bottom: 100px;
+}
+
+.card-item {
+    /* flex-basis: calc((100% - 50) / 3); */
+    width: 392px;
+    height: 294px;
+    border-radius: 15px;
+    padding: 33px;
+    outline: 1px solid red;
+}
+
+.card-title-content {
+    height: 66px;
+    margin-bottom: 30px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-content: flex-start;
+    column-gap: 30px;
+    outline: 1px solid red;
+}
+
 .card-title {
+    margin-bottom: 3px;
     font-size: 24px;
     color: var(--second-shadow-color);
 }
@@ -200,11 +243,22 @@ body {
 }
 
 .card-description {
+    margin-bottom: 30px;
     font-weight: 400;
     line-height: 187%;
 }
 
+.card-actions {
+    display: inline-block;
+    margin-right: 124px;
+}
+
+.action-icon:not(:last-child) {
+    margin-right: 19px;
+}
+
 .card-link {
+    display: inline-block;
     font-weight: 600;
     color: var(--first-shadow-color);
 }
@@ -221,15 +275,22 @@ body {
     background-color: var(--first-background-color);
 }
 
+/* ------------------------- */
+
 .trusted {
     margin-bottom: 200px;
     margin-left: auto;
     margin-right: auto;
+    padding: 55px 83px;
     border-radius: 25px;
     width: 1224px;
     height: 253px;
     backdrop-filter: blur(50px);
     background: var(--third-background-color);
+}
+
+.trusted-container {
+    width: 1059px;
 }
 
 .trusted-title {
@@ -238,29 +299,70 @@ body {
     text-align: center;
 }
 
+.trusted-title:not(:last-child) {
+    margin-bottom: 55px;
+}
+
+.trusted-list {
+    display: flex;
+    gap: 107px;
+}
+
+/* --------------------------- */
+
 .newcomer {
     margin-bottom: 200px;
+}
+
+.newcomer-title-content {
+    display: inline-block;
+    margin-top: 20px;
+    margin-right: 197px;
+    width: 427px;
+    height: 300px;
 }
 
 .newcomer-title {
     font-size: 48px;
     line-height: 130%;
     color: var(--first-light-color);
+    margin-bottom: 30px;
 }
 
 .newcomer-description {
+    margin-bottom: 60px;
     font-size: 18px;
     line-height: 167%;
 }
 
 .newcomer-button {
     border-radius: 8px;
+    border: none;
     width: 198px;
     height: 58px;
     background-color: var(--fifth-light-color);
     font-size: 18px;
     color: var(--third-light-color);
 }
+
+.newcomer-list {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 24px;
+    row-gap: 50px;
+    width: 600px;
+    height: 638px;
+}
+
+.newcomer-item {
+    width: 288px;
+    height: 284px;
+    border-radius: 15px;
+    padding: 28px 22px;
+    outline: 1px solid red;
+}
+
+/* ---------------------- */
 
 .our-team {
     margin-bottom: 250px;
@@ -291,11 +393,18 @@ body {
     color: var(--second-shadow-color);
 }
 
+/* -------------------- */
+
 .contributor {
     margin-bottom: 240px;
 }
 
+.contributor-title-content {
+    margin-bottom: 100px;
+}
+
 .contributor-form {
+    margin: 0 auto;
     display: flex;
     border-radius: 15px;
     width: 549px;
