--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,8 @@
     --tenth-background-color: #007acc;
     --eleventh-background-color: rgba(255, 110, 48, 0.7);
     /* -------------- */
+    --first-radial-color: rgba(255, 72, 66, 0.4);
+    /* -------------- */
     --border-color: rgba(255, 255, 255, 0.15);
     --second-border-color: rgba(255, 255, 255, 0.1);
 }
@@ -319,6 +321,7 @@ body {
 /* ------------------------- */
 
 .trusted {
+    position: relative;
     margin-bottom: 200px;
     margin-left: auto;
     margin-right: auto;
@@ -328,6 +331,24 @@ body {
     height: 253px;
     backdrop-filter: blur(50px);
     background: var(--third-background-color);
+}
+
+.overlay-gradient {
+    position: absolute;
+    border-radius: 25px;
+    width: 159px;
+    height: 159px;
+    /* outline: 1px solid red; */
+    left: 0px;
+    top: 0px; 
+    /* border-radius: 100%; */
+    /* filter: blur(10px); */
+    /* background-image: radial-gradient(circle at top left,
+        var(--first-radial-color),
+        var(--third-background-color) 45%); */
+    background-image: url(../svg/overlay-orange-circle.svg);
+    background-repeat: no-repeat;
+    background-position: right top;
 }
 
 .trusted-container {
@@ -464,6 +485,19 @@ body {
     backdrop-filter: blur(50px);
     background-color: var(--fourth-background-color);
 }
+
+/* .overlay-slider-gradient {
+    position: absolute;
+    width: 23px;
+    height: 23px;
+    overflow: hidden;
+    outline: 1px solid red;
+    left: 254px;
+    top: 80px; 
+    background-image: url(../svg/blue-circle.svg);
+    background-repeat: no-repeat;
+    background-position: right bottom;
+} */
 
 .our-team-name {
     display: block;
