--- a/css/style.css
+++ b/css/style.css
@@ -532,9 +532,10 @@ body {
 /* ---------------------- */
 
 .our-team {
+    height: 600px;
     margin-bottom: 250px;
 }
-
+/*
 .slider-container {
     position: relative;
     display: flex;
@@ -564,7 +565,9 @@ body {
     background-position: center,
         right bottom,
         left 100px;
-    /* background-size: 380px; */
+
+
+    background-size: 380px;
 }
 
 .our-team-list {
@@ -579,7 +582,9 @@ body {
     padding-bottom: 16px;
     border-radius: 8px;
     backdrop-filter: blur(50px);
-    /* background-image: url(../svg/blue-circle.svg); */
+
+    background-image: url(../svg/blue-circle.svg);
+
     background-image: radial-gradient(
         circle at bottom right,
         var(--second-radial-color),
@@ -589,7 +594,7 @@ body {
     background-position: right bottom;
     backdrop-filter: blur(50px);
     background-color: var(--fourth-background-color);
-}
+} */
 
 /* .overlay-slider-gradient {
     position: absolute;
@@ -604,7 +609,7 @@ body {
     background-position: right bottom;
 } */
 
-.our-team-name {
+/* .our-team-name {
     display: block;
     width: 220px;
     margin-bottom: 10px;
@@ -630,10 +635,10 @@ body {
 }
 
 .slider-nav {
-    /* display: block; */
+    display: block;
     display: flex;
     gap: 18px;
-    /* margin: 0 auto; */
+    margin: 0 auto;
     justify-content: center;
 }
 
@@ -649,7 +654,298 @@ body {
 
 .activ {
     background: var(--fifth-light-color);
+} */
+
+.slider-box {
+    overflow: hidden;
+    position: relative;
+    width: 100%;
+    height: 492px;
+    /* outline: 1px dashed burlywood; */
 }
+
+.slider-team-list  {
+    position: absolute;
+    /*! +++++ Пагінація +++++ */
+    right: 0;
+    /* right: -100%; */
+    /* right: -200%; */
+    /*! ______Пагінація______ */
+    width: 300%;
+    height: 100%;
+    display: flex;
+    /** анімація */
+    transition: 
+        transform 
+        500ms 
+        ease-in-out;
+    /* outline: 2px dashed green; */
+}
+
+.team-item {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    padding-left: 187px;
+    display: flex;
+    /* flex: 0 0 auto;  */
+}
+/*todo +++++ var.1: Список Пагінації +++++ */
+.team-item-::after {
+    content: "";
+    width: 168px;
+    height: 8px;
+    margin-top: 592px;
+    margin-left: -51px;
+    /* background-image: url(../images/team-slider-pagination.svg); */
+}
+.team-item-:nth-child(3)::after {
+    background-image: url(../images/team-slider-pagination-1.svg);
+}
+.team-item-:nth-child(2)::after {
+    background-image: url(../images/team-slider-pagination-2.svg);
+}
+.team-item-:nth-child(1)::after {
+    background-image: url(../images/team-slider-pagination-3.svg);
+}
+/*todo _____ var.1: Список Пагінації _____ */
+
+.team-img-box {
+    position: relative;
+    width: 401px;  /* ! crutch */
+    height: 100%;
+    padding-left: 10px; /* ! crutch */
+    background-image: url(../images/team-image-background.png);
+    background-repeat: no-repeat;
+    background-position: right 19px bottom 25px;                                                                         ;
+    /* outline: 1px dotted yellow; */
+}
+
+/*! Додаткова обгортка, для поширення градієнта на бордер */
+.team-name-position-box-overflow {
+    overflow: hidden;
+    position: absolute;
+    right: 3px;
+    bottom: 28px;
+    width: 267px;
+    height: 93px;
+    padding: 1px;
+    border-radius: 8px;
+    backdrop-filter: blur(50px);
+    /* todo var.1 - додатковий елемент фону з розмиттям - не поширює градієнт на бордер*/
+    /* background-image:
+        radial-gradient(
+            circle at bottom right,
+            var(--color-gradient-team-name-position-box),
+            var(--color-background-team-name-position-box) 20%
+            ); */
+    /* outline: 1px dotted yellowgreen; */
+}
+
+.team-name-position-box {
+    /* position: absolute;
+    right: 4px;
+    bottom: 29px;
+    width: 265px;
+    height: 91px;
+    backdrop-filter: blur(50px); */
+    width: 100%;
+    height: 100%;
+    padding: 10px 0 16px 23px;
+    border-radius: 8px;
+    outline: 1px solid var(--color-border-tools-brands);
+    background-color: var(--color-background-team-name-position-box);
+    /* todo var.1 - додатковий елемент фону з розмиттям */
+    /* background-image:
+        radial-gradient(
+            circle at bottom right,
+            var(--color-gradient-team-name-position-box),
+            var(--color-background-team-name-position-box) 20%
+            ); */
+    /* outline: 1px dotted blue; */
+}
+
+/* todo var.2 - додатковий елемент фону з розмиттям */
+.team-name-position-box-background-blur-effect {
+    overflow: hidden;
+    position: absolute;
+    right: -1px;
+    bottom: -1px;
+    width: 30px; 
+    height: 25px;
+    /* background-image: url(../images/team-name-position-box-background-image.png); */
+    background-image: url(../images/team-name-position-box-background-image.svg);
+    background-repeat: no-repeat;
+    background-size: 23px 23px;
+    background-position: right 7px bottom 2px;
+    filter: blur(20px); 
+    /* outline: 1px solid red; */
+}
+
+.team-name {
+    margin-bottom: 2px;
+    /* font-family: var(--font-family); */
+    font-weight: 500;
+    font-size: 26px;
+    line-height: 1.5;
+    letter-spacing: 0.01em;
+    color: var(--color-font-second);
+}
+.team-item:nth-child(1) .team-name {
+    color: #09bd00;
+}
+.team-item:nth-child(2) .team-name {
+    color: #ffab44;
+}
+
+.team-position {
+    /* font-family: var(--font-family); */
+    /* font-weight: 400; */
+    /* font-size: 16px; */
+    line-height: 1.5;
+    color: var(--color-font-third);
+}
+
+
+
+.team-text-box {
+    position: absolute;
+    right: 188px;
+    top: 18px;
+    width: 512px;
+    height: 336px;
+    padding: 110px 0 46px 119px;
+    /* outline: 1px dashed green; */
+}
+
+.team-background-text {
+    position: absolute;
+    left: 43px;
+    top: 23px;
+    width: 103px;
+    height: 320px;
+    font-family: var(--second-family);
+    font-weight: 500;
+    font-size: 250px;
+    background-image: 
+    linear-gradient(
+        235deg,
+        var(--color-background-main) 15%,
+        var(--color-background-team-background-text)
+        );
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    transform: rotate(19deg);
+    /* outline: 1px dashed orange; */
+}
+
+.team-text {
+    position: absolute;
+    width: 393px;
+    height: 180px;
+    font-family: var(--third-family);
+    /* font-weight: 400; */
+    font-size: 14px;
+    line-height: 2.14;
+    letter-spacing: 0.01em;
+    color: var(--color-font-second);
+    /* outline: 1px dotted yellow; */
+}
+.team-item:nth-child(1) .team-text {
+    color: #c5ffc2;
+}
+.team-item:nth-child(2) .team-text {
+    color: #ffd097;
+}
+
+.slider-buttons-list {
+    position: absolute;
+    top: 50%;
+    /* left: 50%; */
+    transform: translate(0, -50%);
+    width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: space-between;
+    /* align-items: center; */
+    /* outline: 1px dashed teal; */
+}
+
+.slider-buttons-item {
+    width: 80px;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* outline: 1px dotted orangered; */
+}
+
+.slider-button-left,
+.slider-button-right {
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: none;
+    background-color: inherit;
+    /* outline: 1px dotted green; */
+}
+
+.slider-button-left:disabled,
+.slider-button-right:disabled {
+    cursor: not-allowed; 
+}
+
+/*todo var.1 -задаємо початковий стан (колір) кнопок < та > так: */
+/* .slider-button-left svg {
+    stroke: var(--color-font-slider-buttons);
+}
+.slider-button-right svg {
+    stroke: var(--color-font_active-or-background_hover);
+} */
+
+/*todo+ var.2 -задаємо початковий стан (колір) кнопок < та > через JS */
+
+/*todo +++++ var.2: Список Пагінації +++++ */
+.slider-pagination-list {
+    position: absolute;
+    left: 50%;
+    bottom: -108px;
+    transform: translate(-50%);
+    width: 168px;
+    height: 8px;
+    margin: 0 auto;
+    /* margin-top: 592px; */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /* outline: 1px dotted blue; */
+    /*todo _____ var.2: Список Пагінації _____ */
+}
+
+.slider-pagination-item {
+    width: 44px;
+    height: 6px;
+    border-radius: 4px;
+    background-color: var(--color-background-forms);
+    transition:
+        color, height,
+        500ms
+        ease-in-out 
+        0ms;
+}
+
+/*todo Початковий стан Списку Пагінації */
+.slider-pagination-item:first-child {
+    height: 8px;
+    background-color:var(--color-font_active-or-background_hover);
+}
+
+.slider-pagination-item:hover {
+    cursor: pointer;
+}
+
 
 /* -------------------- */
 
